aggiungo box per dare più forma

--- a/index.html
+++ b/index.html
@@ -10,20 +10,28 @@
     <header class="top-nav">
       <div class="nav container">
         <div class="row">
+          <div class="box col-xs">
 
+          </div>
+          <div class="box col-xs">
+
+          </div>
         </div>
       </div>
     </header>
     <main>
       <section class="container">
         <div class="row">
-          <div class="col-xs">
+          <div class="box col-xs">
 
           </div>
-          <div class="col-xs">
+          <div class="box col-xs">
 
           </div>
-          <div class="col-xs">
+          <div class="box col-xs">
+
+          </div>
+          <div class="box col-xs">
 
           </div>
 
