sembra buono ma devo capire come mettere al centro il tutto!!

--- a/index.html
+++ b/index.html
@@ -37,7 +37,46 @@
 
         </div>
       </section>
+
     </main>
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="box col-xs">
+
+          </div>
+
+        </div>
+        <div class="container">
+          <div class="row left">
+            <div class="box col-xs">
+
+            </div>
+            <div class="box col-xs">
+
+            </div>
+            <div class="box col-xs">
+
+            </div>
+
+          </div>
+          <div class="row right">
+            <div class="box col-xs">
+
+            </div>
+            <div class="box col-xs">
+
+            </div>
+            <div class="box col-xs">
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    </section>
 
 
   </body>
