--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header class="top-nav">
       <div class="nav container">
         <div class="row">
-          <div class="box col-xs">
+          <div class="box col-xs-12 col-sm-12 col-md-4 ">
 
           </div>
-          <div class="box col-xs">
+          <div class="box col-xs-12 col-md-4 col-md-offset-4 ">
 
           </div>
         </div>
@@ -22,16 +22,16 @@
     <main>
       <section class="container">
         <div class="row">
-          <div class="box col-xs">
+          <div class="box col-sm-12 col-md-3">
 
           </div>
-          <div class="box col-xs">
+          <div class="box col-sm-12 col-md-3">
 
           </div>
-          <div class="box col-xs">
+          <div class="box col-sm-12 col-md-3">
 
           </div>
-          <div class="box col-xs">
+          <div class="box col-sm-12 col-md-3">
 
           </div>
 
@@ -42,32 +42,32 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="box col-xs">
+          <div class="box col-xs-12">
 
           </div>
 
         </div>
         <div class="container">
           <div class="row left">
-            <div class="box col-xs">
+            <div class="box col-sm-4 col-md-4">
 
             </div>
-            <div class="box col-xs">
+            <div class="box col-sm-4 col-md-4 col-offset-2">
 
             </div>
-            <div class="box col-xs">
+            <div class="box col-sm-4 col-md-4">
 
             </div>
 
           </div>
           <div class="row right">
-            <div class="box col-xs">
+            <div class="box col-sm-4 col-md-4">
 
             </div>
-            <div class="box col-xs">
+            <div class="box col-sm-4 col-md-4">
 
             </div>
-            <div class="box col-xs">
+            <div class="box col-sm-4 col-md-4">
 
             </div>
 
