--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="background-box">
       <section class="container">
         <div class="row">
           <div class="box col-sm-12 col-md-3">
@@ -42,7 +42,7 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="box col-xs-12">
+          <div class="box col-sm-12">
 
           </div>
 
@@ -76,6 +76,25 @@
         </div>
 
       </div>
+    </section>
+    <section class="background-box">
+      <div class="container">
+        <div class="row">
+          <div class="box col-sm-12 col-md-3">
+
+          </div>
+          <div class="box col-sm-12 col-md-3">
+
+          </div>
+          <div class="box col-sm-12 col-md-3">
+
+          </div>
+          <div class="box col-sm-12 col-md-3">
+
+          </div>
+
+        </div>
+
     </section>
 
 
