--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
     <header class="top-nav">
       <div class="nav container">
         <div class="row">
-          <div class="box col-xs-12 col-sm-12 col-md-4 ">
+          <div class="col-xs-12 col-sm-12 col-md-4 ">
+            <div class="box">
 
+            </div>
           </div>
-          <div class="box col-xs-12 col-md-4 col-md-offset-4 ">
+          <div class="col-xs-12 col-md-4 col-md-offset-4 ">
+            <div class="box">
 
+            </div>
           </div>
         </div>
       </div>
@@ -22,17 +26,25 @@
     <main class="background-box">
       <section class="container">
         <div class="row">
-          <div class="box col-sm-12 col-md-3">
+          <div class="col-sm-12 col-md-3">
+            <div class="box">
 
+            </div>
           </div>
-          <div class="box col-sm-12 col-md-3">
+          <div class="col-sm-12 col-md-3">
+            <div class="box">
 
+            </div>
           </div>
-          <div class="box col-sm-12 col-md-3">
+          <div class="col-sm-12 col-md-3">
+            <div class="box">
 
+            </div>
           </div>
-          <div class="box col-sm-12 col-md-3">
+          <div class="col-sm-12 col-md-3">
+            <div class="box">
 
+            </div>
           </div>
 
         </div>
@@ -42,54 +54,68 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="box col-sm-12">
+          <div class="col-sm-12">
+            <div class="box">
 
+            </div>
           </div>
 
         </div>
-        <div class="container">
+
           <div class="row left">
-            <div class="box col-sm-4 col-md-4">
+            <div class=" col-sm-4 col-md-4">
+              <div class="box">
 
+              </div>
             </div>
-            <div class="box col-sm-4 col-md-4 col-offset-2">
+            <div class=" col-sm-4 col-md-4 col-offset-2">
+              <div class="box">
 
+              </div>
             </div>
-            <div class="box col-sm-4 col-md-4">
+            <div class=" col-sm-4 col-md-4">
+              <div class="box">
 
+              </div>
             </div>
 
           </div>
           <div class="row right">
-            <div class="box col-sm-4 col-md-4">
+            <div class=" col-sm-4 col-md-4">
+              <div class="box">
 
+              </div>
             </div>
-            <div class="box col-sm-4 col-md-4">
+            <div class=" col-sm-4 col-md-4">
+              <div class="box">
 
+              </div>
             </div>
-            <div class="box col-sm-4 col-md-4">
+            <div class=" col-sm-4 col-md-4">
+              <div class="box">
 
+              </div>
             </div>
 
           </div>
 
         </div>
 
-      </div>
+
     </section>
     <section class="background-box">
       <div class="container">
         <div class="row">
-          <div class="box col-sm-12 col-md-3">
+          <div class=" col-sm-12 col-md-3">
 
           </div>
-          <div class="box col-sm-12 col-md-3">
+          <div class=" col-sm-12 col-md-3">
 
           </div>
-          <div class="box col-sm-12 col-md-3">
+          <div class=" col-sm-12 col-md-3">
 
           </div>
-          <div class="box col-sm-12 col-md-3">
+          <div class=" col-sm-12 col-md-3">
 
           </div>
 
