--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="nav container">
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-4 ">
-            <div class="box">
+            <div class="box box-tuw">
 
             </div>
           </div>
@@ -26,22 +26,22 @@
     <main class="background-box">
       <section class="container">
         <div class="row">
-          <div class="col-sm-12 col-md-3">
+          <div class="col-md-12 col-md-offset-4">
             <div class="box">
 
             </div>
           </div>
-          <div class="col-sm-12 col-md-3">
+          <div class="col-md-12 col-md-offset-4">
             <div class="box">
 
             </div>
           </div>
-          <div class="col-sm-12 col-md-3">
+          <div class="col-md-12 col-md-offset-4">
             <div class="box">
 
             </div>
           </div>
-          <div class="col-sm-12 col-md-3">
+          <div class="col-md-12 col-md-offset-4">
             <div class="box">
 
             </div>
@@ -54,7 +54,7 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="col-sm-12">
+          <div class="col-md-12 col-md-offset-4">
             <div class="box">
 
             </div>
@@ -68,7 +68,7 @@
 
               </div>
             </div>
-            <div class=" col-sm-4 col-md-4 col-offset-2">
+            <div class=" col-sm-4 col-md-4 ">
               <div class="box">
 
               </div>
@@ -98,10 +98,7 @@
             </div>
 
           </div>
-
         </div>
-
-
     </section>
     <section class="background-box">
       <div class="container">
@@ -121,8 +118,7 @@
 
         </div>
 
-    </section>
-
+      </section>
 
   </body>
 </html>
