--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <header class="top-nav">
       <div class="nav container">
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-4 ">
-            <div class="box box-tuw">
+          <div class="col-sm-12 col-md-6 ">
+            <div class="box box-two">
 
             </div>
           </div>
-          <div class="col-xs-12 col-md-4 col-md-offset-4 ">
+          <div class="col-sm-0 col-md-6  ">
             <div class="box">
 
             </div>
@@ -26,22 +26,22 @@
     <main class="background-box">
       <section class="container">
         <div class="row">
-          <div class="col-md-12 col-md-offset-4">
+          <div class="col-md-12 ">
             <div class="box">
 
             </div>
           </div>
-          <div class="col-md-12 col-md-offset-4">
+          <div class="col-md-12 ">
             <div class="box">
 
             </div>
           </div>
-          <div class="col-md-12 col-md-offset-4">
+          <div class="col-md-12 ">
             <div class="box">
 
             </div>
           </div>
-          <div class="col-md-12 col-md-offset-4">
+          <div class="col-md-12 ">
             <div class="box">
 
             </div>
@@ -49,76 +49,81 @@
 
         </div>
       </section>
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 ">
+              <div class="box">
 
-    </main>
-    <section>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-md-offset-4">
-            <div class="box">
-
+              </div>
             </div>
-          </div>
 
-        </div>
+          </div>
 
           <div class="row left">
-            <div class=" col-sm-4 col-md-4">
+            <div class=" col-xs-12 col-sm-6 col-md-4">
               <div class="box">
 
               </div>
             </div>
-            <div class=" col-sm-4 col-md-4 ">
+            <div class=" col-xs-12 col-sm-6 col-md-4 ">
               <div class="box">
 
               </div>
             </div>
-            <div class=" col-sm-4 col-md-4">
+            <div class=" col-xs-12 col-sm-6 col-md-4">
               <div class="box">
 
               </div>
             </div>
-
-          </div>
-          <div class="row right">
-            <div class=" col-sm-4 col-md-4">
+            <div class=" col-xs-12 col-sm-6 col-md-4">
               <div class="box">
 
               </div>
             </div>
-            <div class=" col-sm-4 col-md-4">
+            <div class=" col-xs-12 col-sm-6 col-md-4">
               <div class="box">
 
               </div>
             </div>
-            <div class=" col-sm-4 col-md-4">
+            <div class=" col-xs-12 col-sm-6 col-md-4">
               <div class="box">
 
               </div>
             </div>
-
-          </div>
-        </div>
-    </section>
-    <section class="background-box">
-      <div class="container">
-        <div class="row">
-          <div class=" col-sm-12 col-md-3">
-
-          </div>
-          <div class=" col-sm-12 col-md-3">
-
-          </div>
-          <div class=" col-sm-12 col-md-3">
-
-          </div>
-          <div class=" col-sm-12 col-md-3">
-
           </div>
 
         </div>
-
       </section>
+      <section class="background-box">
+        <div class="container">
+          <div class="row">
+            <div class=" col-md-12 ">
+              <div class="box">
+
+              </div>
+            </div>
+            <div class=" col-md-12 ">
+              <div class="box">
+
+              </div>
+            </div>
+            <div class=" col-md-12 ">
+              <div class="box">
+
+              </div>
+            </div>
+            <div class=" col-md-12 ">
+              <div class="box">
+
+              </div>
+            </div>
+
+          </div>
+
+        </section>
+
+    </main>
 
   </body>
 </html>
