--- a/index.html
+++ b/index.html
@@ -98,22 +98,22 @@
       <section class="background-box">
         <div class="container">
           <div class="row">
-            <div class=" col-md-12 ">
+            <div class="col-xs-12 col-md-12 ">
               <div class="box">
 
               </div>
             </div>
-            <div class=" col-md-12 ">
+            <div class="col-xs-12 col-md-6 ">
               <div class="box">
 
               </div>
             </div>
-            <div class=" col-md-12 ">
+            <div class="col-xs-12 col-md-6 ">
               <div class="box">
 
               </div>
             </div>
-            <div class=" col-md-12 ">
+            <div class="col-xs-12 col-md-12 ">
               <div class="box">
 
               </div>
@@ -121,9 +121,71 @@
 
           </div>
 
-        </section>
+      </section>
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-12 ">
+              <div class="box">
 
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-12 ">
+              <div class="box">
+
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-12 ">
+              <div class="box">
+
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-12 ">
+              <div class="box">
+
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-12 ">
+              <div class="box">
+
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-12 ">
+              <div class="box">
+
+              </div>
+            </div>
+
+          </div>
+
+      </section>
     </main>
+    <footer>
+      <div class="containe">
+        <div class="row">
+          <div class="col-xs-12 col-md-4">
+            <div class="box">
+
+            </div>
+
+          </div>
+          <div class="col-xs-12 col-md-4">
+            <div class="box">
+
+            </div>
+
+          </div>
+          <div class="col-xs-12 col-md-4">
+            <div class="box">
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    </footer>
 
   </body>
 </html>
