--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         </div>
       </section>
-      <section>
+      <section class="background-box-2">
         <div class="container">
           <div class="row">
             <div class="col-md-12 ">
@@ -122,7 +122,7 @@
           </div>
 
       </section>
-      <section>
+      <section class="background-box-2">
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-md-12 ">
@@ -161,31 +161,29 @@
       </section>
     </main>
     <footer>
-      <div class="containe">
-        <div class="row">
-          <div class="col-xs-12 col-md-4">
-            <div class="box">
+      <div class="background-box-2">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-4">
+              <div class="box">
+
+              </div>
 
             </div>
+            <div class="col-xs-12 col-md-4">
+              <div class="box">
 
-          </div>
-          <div class="col-xs-12 col-md-4">
-            <div class="box">
-
-            </div>
-
-          </div>
-          <div class="col-xs-12 col-md-4">
-            <div class="box">
+              </div>
 
             </div>
+            <div class="col-xs-12 col-md-4">
+              <div class="box">
 
+              </div>
+            </div>
           </div>
-
         </div>
-
       </div>
     </footer>
-
   </body>
 </html>
