--- a/index.html
+++ b/index.html
@@ -11,13 +11,42 @@
       <div class="nav container">
         <div class="row">
           <div class="col-sm-12 col-md-6 ">
-            <div class="box box-two">
-
+            <div class="">
+              <h1>START BOOTSTRAP</h1>
             </div>
           </div>
           <div class="col-sm-0 col-md-6  ">
             <div class="box">
+              <nav class="navbar navbar-default">
+                <div class="">
+                  <!-- Brand and toggle get grouped for better mobile display -->
+                  <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+
+                  </div>
+                  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                      <li>
+                        <a href="#">Profilo</a>
+                      </li>
+                      <li>
+                        <a href="#">About</a>
+                      </li>
+                      <li>
+                        <a href="#">Contat</a>
+                      </li>
+                    </ul>
+                  </ul>
+
+                </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
+                </nav>
             </div>
           </div>
         </div>
@@ -161,27 +190,28 @@
       </section>
     </main>
     <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12 col-md-4">
-            <div class="box">
+
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-4">
+              <div class="box">
+
+              </div>
 
             </div>
+            <div class="col-xs-12 col-md-4">
+              <div class="box">
 
-          </div>
-          <div class="col-xs-12 col-md-4">
-            <div class="box">
+              </div>
 
             </div>
+            <div class="col-xs-12 col-md-4">
+              <div class="box">
 
-          </div>
-          <div class="col-xs-12 col-md-4">
-            <div class="box">
-
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </footer>
+      </footer>
   </body>
-  </html>
+</html>
