--- a/index.html
+++ b/index.html
@@ -8,49 +8,33 @@
   </head>
   <body>
     <header class="top-nav">
-      <div class="nav container">
-        <div class="row">
-          <div class="col-sm-12 col-md-6 ">
-            <div class="">
-              <h1>START BOOTSTRAP</h1>
-            </div>
-          </div>
-          <div class="col-sm-0 col-md-6  ">
-            <div class="box">
-              <nav class="navbar navbar-default">
-                <div class="">
-                  <!-- Brand and toggle get grouped for better mobile display -->
-                  <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <nav class="navbar navbar-default">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"><h1>pippo</h1></a>
+    </div>
 
-                      <span class="sr-only">Toggle navigation</span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                    </button>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
 
-                  </div>
-                  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                      <li>
-                        <a href="#">Profilo</a>
-                      </li>
-                      <li>
-                        <a href="#">About</a>
-                      </li>
-                      <li>
-                        <a href="#">Contat</a>
-                      </li>
-                    </ul>
-                  </ul>
+      </ul>
 
-                </div><!-- /.navbar-collapse -->
-                </div><!-- /.container-fluid -->
-                </nav>
-            </div>
-          </div>
-        </div>
-      </div>
+
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
     </header>
     <main class="background-box">
       <section class="container">
@@ -190,7 +174,7 @@
       </section>
     </main>
     <footer>
-
+      <div class="background-box-2">
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-md-4">
@@ -212,6 +196,8 @@
             </div>
           </div>
         </div>
-      </footer>
+      </div>
+    </footer>
   </body>
-</html>
+
+  </html>
