--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><h1 class="margin-padding">START BOOSTRAP</h1></a>
+              <a class="navbar-brand" href="#"><h1 class="margin-padding text-w">START BOOSTRAP</h1></a>
             </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right text-w">
               <li><a href="#">Profilo</a></li>
               <li><a href="#">Abaut</a></li>
               <li><a href="#">Contact</a></li>
@@ -40,23 +40,21 @@
       <section class="container">
         <div class="row">
           <div class="col-md-12 ">
-            <div class="box">
+            <div class="box text-center text-w">
               <img src="./img/avatar.svg" alt="">
             </div>
           </div>
           <div class="col-md-12 ">
-            <div class="box">
+            <div class="box text-center text-w">
               <h1>START BOOSTRAP</h1>
             </div>
           </div>
           <div class="col-md-12 ">
-            <div class="box">
 
-            </div>
           </div>
           <div class="col-md-12 ">
-            <div class="box">
-
+            <div class="box text-center text-w">
+              <h2>Grafic artist-Webdesiner-Illustretor</h2>
             </div>
           </div>
 
@@ -174,7 +172,7 @@
       </section>
     </main>
     <footer>
-      <div class="background-box-2">
+    
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-md-4">
@@ -196,7 +194,7 @@
             </div>
           </div>
         </div>
-      </div>
+
     </footer>
   </body>
 
