migliorato anche se tardi

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 
 
     </header>
+      <!-- JAVASCRIPT -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <main class="background-box">
       <section class="container">
         <div class="row">
@@ -172,7 +175,7 @@
       </section>
     </main>
     <footer>
-    
+
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-md-4">
@@ -196,6 +199,8 @@
         </div>
 
     </footer>
+
+
   </body>
 
   </html>
