--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-default top-nav">
+      <nav class="navbar navbar-default top-nav navbar-fixed-top">
         <div class="container top-nav">
           <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
