--- a/index.html
+++ b/index.html
@@ -31,37 +31,26 @@
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
-
-
-
-
     </header>
-      <!-- JAVASCRIPT -->
+    <!-- JAVASCRIPT -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- MAIN -->
     <main class="background-box">
       <section class="container">
         <div class="row">
-          <div class="col-md-12 ">
-            <div class="box text-center text-w">
-              <img src="./img/avatar.svg" alt="">
+          <div class="col-md-12 text-center">
+            <img class="hero-img" src="./img/avatar.svg" alt="">
+            <h1>START BOOSTRAP</h1>
+            <div class="star-divider">
+              <i class="fas fa-star"></i>
             </div>
+            <h2>Grafic artist-Webdesiner-Illustretor</h2>
           </div>
-          <div class="col-md-12 ">
-            <div class="box text-center text-w">
-              <h1>START BOOSTRAP</h1>
-            </div>
-          </div>
-          <div class="col-md-12 ">
-
-          </div>
-          <div class="col-md-12 ">
-            <div class="box text-center text-w">
-              <h2>Grafic artist-Webdesiner-Illustretor</h2>
-            </div>
-          </div>
-
         </div>
+
+
+
       </section>
       <section class="background-box-2">
         <div class="container">
@@ -135,72 +124,72 @@
 
           </div>
 
-      </section>
-      <section class="background-box-2">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12 col-md-12 ">
-              <div class="box">
+        </section>
+        <section class="background-box-2">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12 col-md-12 ">
+                <div class="box">
+
+                </div>
+              </div>
+              <div class="col-xs-12 col-md-12 ">
+                <div class="box">
+
+                </div>
+              </div>
+              <div class="col-xs-12 col-md-12 ">
+                <div class="box">
+
+                </div>
+              </div>
+              <div class="col-xs-12 col-md-12 ">
+                <div class="box">
+
+                </div>
+              </div>
+              <div class="col-xs-12 col-md-12 ">
+                <div class="box">
+
+                </div>
+              </div>
+              <div class="col-xs-12 col-md-12 ">
+                <div class="box">
+
+                </div>
+              </div>
+
+            </div>
+
+          </section>
+        </main>
+        <footer>
+
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12 col-md-4">
+                <div class="box">
+
+                </div>
 
               </div>
-            </div>
-            <div class="col-xs-12 col-md-12 ">
-              <div class="box">
+              <div class="col-xs-12 col-md-4">
+                <div class="box">
+
+                </div>
 
               </div>
-            </div>
-            <div class="col-xs-12 col-md-12 ">
-              <div class="box">
+              <div class="col-xs-12 col-md-4">
+                <div class="box">
 
+                </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-12 ">
-              <div class="box">
-
-              </div>
-            </div>
-            <div class="col-xs-12 col-md-12 ">
-              <div class="box">
-
-              </div>
-            </div>
-            <div class="col-xs-12 col-md-12 ">
-              <div class="box">
-
-              </div>
-            </div>
-
           </div>
 
-      </section>
-    </main>
-    <footer>
-
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12 col-md-4">
-              <div class="box">
-
-              </div>
-
-            </div>
-            <div class="col-xs-12 col-md-4">
-              <div class="box">
-
-              </div>
-
-            </div>
-            <div class="col-xs-12 col-md-4">
-              <div class="box">
-
-              </div>
-            </div>
-          </div>
-        </div>
-
-    </footer>
+        </footer>
 
 
   </body>
 
-  </html>
+</html>
