--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="./css/styles.css">
     <title></title>
   </head>
@@ -48,9 +49,6 @@
             <h2>Grafic artist-Webdesiner-Illustretor</h2>
           </div>
         </div>
-
-
-
       </section>
       <section class="background-box-2">
         <div class="container">
@@ -190,6 +188,6 @@
         </footer>
 
 
-  </body>
+      </body>
 
-</html>
+      </html>
