--- a/index.html
+++ b/index.html
@@ -50,20 +50,26 @@
           </div>
         </div>
       </section>
+      <!-- PORTFOLIO -->
       <section class="background-box-2">
         <div class="container">
           <div class="row">
-            <div class="col-md-12 ">
-              <div class="box">
-
-              </div>
+            <div class="col-md-12 text-center h-c">
+            <h2>Portfolio</h2>
+            <div class="star-divider star-blue">
+              <i class="fas fa-star"></i>
             </div>
-
           </div>
+        </div>
+
 
           <div class="row left">
             <div class=" col-xs-12 col-sm-6 col-md-4">
-              <div class="box">
+              <div class="portfolio-item">
+                <div class="portfolio-layover">
+                  <i class="fas fa-plus"></i>
+                </div>
+                <img class="img-responsive" src="./img/cabin.png" alt="">
 
               </div>
             </div>
