--- a/index.html
+++ b/index.html
@@ -70,32 +70,48 @@
                   <i class="fas fa-plus"></i>
                 </div>
                 <img class="img-responsive" src="./img/cabin.png" alt="">
-
               </div>
+
             </div>
+
             <div class=" col-xs-12 col-sm-6 col-md-4 ">
-              <div class="box">
-
+              <div class="portfolio-item">
+                <div class="portfolio-layover">
+                  <i class="fas fa-plus"></i>
+                </div>
+                <img class="img-responsive" src="./img/safe.png" alt="">
               </div>
             </div>
             <div class=" col-xs-12 col-sm-6 col-md-4">
-              <div class="box">
-
+              <div class="portfolio-item">
+                <div class="portfolio-layover">
+                  <i class="fas fa-plus"></i>
+                </div>
+                <img class="img-responsive" src="./img/submarine.png" alt="">
               </div>
             </div>
             <div class=" col-xs-12 col-sm-6 col-md-4">
-              <div class="box">
-
+              <div class="portfolio-item">
+                <div class="portfolio-layover">
+                  <i class="fas fa-plus"></i>
+                </div>
+                <img class="img-responsive" src="./img/circus.png" alt="">
               </div>
             </div>
             <div class=" col-xs-12 col-sm-6 col-md-4">
-              <div class="box">
-
+              <div class="portfolio-item">
+                <div class="portfolio-layover">
+                  <i class="fas fa-plus"></i>
+                </div>
+                <img class="img-responsive" src="./img/game.png" alt="">
               </div>
             </div>
             <div class=" col-xs-12 col-sm-6 col-md-4">
-              <div class="box">
-
+              <div class="portfolio-item">
+                <div class="portfolio-layover">
+                  <i class="fas fa-plus"></i>
+                </div>
+                <img class="img-responsive" src="./img/safe.png" alt="">
               </div>
             </div>
           </div>
