--- a/index.html
+++ b/index.html
@@ -118,22 +118,24 @@
 
         </div>
       </section>
-      <section class="background-box">
+      <!-- ABOUT -->
+      <section class="about background-box">
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 col-md-12 ">
-              <div class="box">
-
+            <div class="col-xs-12 col-md-12 text-center ">
+              <h2>About</h2>
+              <div class="star-divider">
+                <i class="fas fa-star"></i>
               </div>
             </div>
             <div class="col-xs-12 col-md-6 ">
-              <div class="box">
-
+              <div class="left">
+                <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
               </div>
             </div>
             <div class="col-xs-12 col-md-6 ">
-              <div class="box">
-
+              <div class="right">
+                <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
               </div>
             </div>
             <div class="col-xs-12 col-md-12 ">
